<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/colorPrimaryDark">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="60dp"
        android:background="?attr/colorPrimaryDark"
        android:paddingBottom="70dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="knt3tb.cs4720.uvalgbtq.PolicyActivity"
        tools:showIn="@layout/app_bar_policy">

        <Button
            android:id="@+id/buttonLinkUVA"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#FF8000"
            android:text="@string/link_text_uva"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonLinkCville"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLinkUVA"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#FF8000"
            android:text="@string/link_text_cville"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/UVAButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLinkCville"
            android:layout_marginTop="10dp"
            android:background="#1B438E"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="UVAButton"
            android:paddingRight="10dp"
            android:text="UVA Policies"
            android:textColor="#fff"
            android:textSize="16sp" />


        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/UVAButton"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:padding="16dp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="fastOutLinearIn"
            app:ael_orientation="vertical">

            <TextView
                android:id="@+id/uvatv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:text="@string/uva_policy"
                android:textColor="#ffffff" />
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/CvilleButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/expandableLayout1"
            android:layout_marginTop="10dp"
            android:background="#1B438E"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="CvilleButton"
            android:paddingRight="10dp"
            android:text="Charlottesville Policies"
            android:textColor="#fff"
            android:textSize="16sp" />

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CvilleButton"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:padding="16dp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="fastOutLinearIn"
            app:ael_orientation="vertical">

            <TextView
                android:id="@+id/cvilletv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:text="@string/cville_policy"
                android:textColor="#fff" />
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/T9Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expandableLayout2"
            android:layout_marginTop="10dp"
            android:background="#1B438E"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="T9Button"
            android:paddingRight="10dp"
            android:text="Title IX"
            android:textColor="#fff"
            android:textSize="16sp" />
        <!--1B438E-->

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T9Button"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:padding="16dp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="fastOutLinearIn"
            app:ael_orientation="vertical">

            <TextView
                android:id="@+id/t9tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:text="@string/title_9"
                android:textColor="#fff" />
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    </RelativeLayout>
</ScrollView>

